test/tests/stages/18_structures/invalid_types/initializers/initialize_struct_with_scalar.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[24]:
  int
  identifier(main)
  (
  void
  )
  {
  struct
  identifier(pair)
  {
  int
  identifier(x)
  ;
  int
  identifier(y)
  ;
  }
  ;
  struct
  identifier(pair)
  identifier(p)
  =
  const int(1)
  ;
  }
